# python-study-for-coding-test

./: .editorconfig  .gitignore
.devcontainer/: devcontainer.json  post-create.sh
src/: pyproject.toml
