[project]
name = "python-project"
version = "0.1.0"
description = "python starter project for development"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.8.4",
]

[tool.ruff]
select = ["E","F","N"]
extend-select = ["I"]
fix = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"